--- a/css/style.css
+++ b/css/style.css
@@ -3,22 +3,28 @@ body{
     font-size: 14px;
     float: auto;
     position: relative;
+    
+    
 }
 
-
 footer{
-    background: #333;
+    background: #222;
     color: #9d9d9d;
     text-align: center;
     height: 50px;
     line-height: 50px;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 14px;
+    bottom: 0;
+    left: 0;  
+    position: static;
+    width: 100%;
+    
 }
 
 
 .container-fluid{
-    color: #333;
+    color: #222;
     height: 75px;
     line-height: 75px;
     padding-top: 12px;
