--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ footer {
     justify-content: center;
     align-items: right;
     width: calc(100% - 100px);
-    padding-left: 100px;
+
 }
 
 
@@ -52,10 +52,13 @@ footer {
 
 .card {
     
-    display:inline-flex;
+    display:flex;
+    justify-content: space-around;
     width: calc(100% - 100px);
-    margin: 15px;
-    padding-left: 100px;
+    margin: 20px;
+    padding-left: 90px;
+    align-content: center;
+    
     
 
     
@@ -65,9 +68,11 @@ footer {
     
     width: 100%;
     
+    
 }
 
 button {
     margin-right: 15px;
     
 }
+
