--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
 
 body {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: sans-serif;
     font-size: 14px;
     float: auto;
     position: relative;
-    
-    
+      
 }
 
 footer {
@@ -22,17 +21,16 @@ footer {
     width: 100%;
     
 }
-
-
 .container-fluid{
     color: #222;
     height: 75px;
+    width: 100%;
     line-height: 75px;
     padding-top: 12px;
 }
 
-#chart_div{   
-    
+#piechart{   
+    display: grid;
     flex-direction: row;
     justify-content: center;
     align-items: right;
@@ -40,39 +38,141 @@ footer {
 
 }
 
-
-
 #walletInput {
-    display: grid;
+    
     margin-bottom: 10px;
-    width: calc(100% - 100px);
-    
-    
+    width: calc(100% - 100px); 
 }
 
-.card {
-    
-    display:flex;
-    justify-content: space-around;
+.card {    
+    display:flex;    
     width: calc(100% - 100px);
-    margin: 20px;
-    padding-left: 90px;
+    margin: 10px;
+    padding-left: 80px;
     align-content: center;
     
-    
-
-    
 }
-
-.container {
-    
-    width: 100%;
-    
-    
+.container {    
+    width: 90%; 
 }
 
 button {
     margin-right: 15px;
+
+}
+
+.portfolioSection{
+    display: flex;
+    width: 90%;
+    height: 80px;  
+    justify-content: space-between;  
+    text-align: center;
+
+    margin-left: 4%;  
+   
+}
+.portfolioSection div{
+    border: solid #222;
+    width: 10%;
+    
+}
+.portfolioCard div{
+    height: 50px;
+    width: 50px;
+    padding-top: 2%;
+    padding-left: 9%;
+    padding-right: 9%;
+    padding-bottom: 2%;     
+ 
+}
+
+#lineChart{
+    display: flex;
+    width: 90%;
+    height: 300px;
+    align-items: center;
+    margin-top: 3%;
+    margin-left: 5%;
+}
+
+.secLineChat{   
+    width: 100%;
+}
+
+.modal-conteiner{
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 2000;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.35);
+    transform: scale(1.1);
+    opacity: 0;
+    
+    /*transition: visibility 0.25 ease-in-out transform 0.25s ease-in-out opacity 0.25s ease-in-out; */
     
 }
 
+.show-modal{
+    opacity: 1;
+    display: flex;
+    transform: scale(1.0);    
+}
+
+.modal-content{
+    background: #222;
+    min-width: 300px;
+    width: 25%;
+    height: 100%;
+    padding: 40px;    
+    margin: 5px; 
+    margin-top: 2px;    
+   
+}
+
+#stockinsert{
+    text-decoration: none;
+    width: 125px;
+    height: 50px;   
+    margin-left: 25%;
+    margin-top: 10%;    
+    padding-top: 7px;
+    background: #222;
+    font-style: bold;
+    color: aliceblue;
+    text-align: center;
+    font-size: 2rem;
+    border-radius: 10px;
+}
+
+#stockinsert:hover, #close:hover{
+    font-weight: bold;
+    color: #222;
+    background-color: aliceblue;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.modal-content label{
+    padding-top: 5px;
+    margin-top: 5px;
+    display: grid;
+}
+
+#close{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 50px;
+    height: 50px;    
+    border: none;
+    background: white;
+    color: #222;
+    cursor: pointer;   
+    font-size: 1.2em;
+    border-radius: 10px;
+}
