This git will update the stock table and insert the summaries displays Total Invested and Total Taxes

--- a/css/signin.css
+++ b/css/signin.css
@@ -57,6 +57,11 @@ form {
 
     
   }
+
+  #loginStatus{
+    display: flex;
+    justify-content: center;
+  }
   
   /* The "Forgot password" text */
   span.psw {
