--- a/css/style.css
+++ b/css/style.css
@@ -67,13 +67,13 @@ button {
   height: 80px;  
   justify-content: space-between;  
   text-align: center;
-
   margin-left: 4%;  
  
 }
 .portfolioSection div{
   border: solid #222;
-  width: 10%;
+  width: 14%;
+  align-items: center;
   
 }
 .portfolioCard div{
@@ -117,7 +117,9 @@ button {
   width: 25%;
   height: 90%;
   padding: 55px;    
-  margin: 5px;     
+  margin: 5px;   
+  padding-top: 10px;    
+     
  
 }
 
@@ -126,7 +128,7 @@ button {
   width: 125px;
   height: 50px;   
   margin-left: 25%;
-  margin-top: 10%;    
+  margin-top: 5%;    
   padding-top: 7px;
   background: #222;
   font-style: bold;
@@ -161,4 +163,11 @@ button {
   cursor: pointer;   
   font-size: 1.2em;
   border-radius: 10px;
+}
+
+.tableButtons{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
 }
